chore: migrate to Java 21 (virtual threads, SequencedCollection)